# loop_app

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DETECTION_ENGINE.md  ETW_NOTES.md  IPC_DESIGN.md  MEMORY_MODEL.md  PERFORMANCE_NOTES.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  THREAT_MODEL.md  VALIDATION_LOG.md  capacitor.config.ts  package-lock.json  package.json  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle  build.gradle.kts
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/layouts/: main_layout.dart
lib/screens/: api_details_placeholder.dart  change_password_screen.dart  client_tracking_screen.dart  home_map_screen.dart  home_map_screen.dart.bak  login_screen.dart  onboarding_screen.dart  orders_screen.dart  partners_screen.dart  profile_screen.dart  settings_detail_screen.dart
lib/state/: app_state.dart  app_state_provider.dart
lib/theme/: app_colors.dart  app_theme.dart
lib/utils/: localization.dart
lib/widgets/: email_field.dart  login_button.dart  loop_button.dart  neon_grid_background.dart  onboarding_modal.dart  password_field.dart  profile_panel.dart  scale_tap.dart  widgets.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
www/: index.html  offline.html
(+6 files in other folders)
